# raiodoro

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  workflow.yaml
.github/workflows/: workflow.yml
docs/: index.html  package-lock.json  package.json
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/actions/: handle.change.ts  handle.exit.ts  handle.pause.ts  handle.start.ts  handle.stop.ts
src/cases/: backend_log.ts  short_i.ts  short_k.ts  short_p.ts
src/components/app/: control-buttons.tsx  puase-button.tsx  relogio.tsx  start-button.tsx  stop-button.tsx
src/components/ui/: input.tsx
src/components/ui-theme/: theme-provider.tsx  theme-toggle.tsx
